# CorkBoard

./: .gitignore  BUILD_PLAN.md  CLAUDE (1).md  CLAUDE (2).md  CLAUDE (3).md  README.md  SPEC.md  install.bat  run.bat
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 417dc4ed0bc8_initial_schema.py
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routes/: boards.py  cards.py  connections.py
backend/tests/: conftest.py  test_boards.py  test_cards.py  test_connections.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Board.tsx  Card.tsx  CardEditor.tsx  ColorPicker.tsx  ConnectionLayer.tsx  ConnectionLine.tsx  ResizeHandle.tsx  SmartGuides.tsx  StatusBar.tsx  Toolbar.tsx
frontend/src/hooks/: useBoards.ts  useCards.ts  useConnections.ts  useDrag.ts  useResize.ts  useSnap.ts  useUndoRedo.ts
frontend/src/stores/: boardStore.ts
frontend/src/types/: index.ts
